# estoque

./: pyproject.toml  report.html
projeto/: conftest.py  settings.py  urls.py
projeto/core/: views.py
projeto/core/tests/factories/: user_factory.py
projeto/estoque/: admin.py  apps.py  exceptions.py  forms.py  signals.py  views.py
projeto/estoque/management/: __init__.py
projeto/estoque/management/commands/: criar_produtos.py
projeto/estoque/managers/: estoque_entrada_manager.py  estoque_saida_manager.py
projeto/estoque/migrations/: 0001_initial.py  0002_alter_estoqueitens_saldo.py  0003_remove_protocoloentrega_data_retorno_and_more.py
projeto/estoque/models/: estoque_itens_model.py  estoque_model.py  protocolo_entrega_itens_model.py  protocolo_entrega_model.py
projeto/estoque/models/proxys/: estoque_entrada.py  estoque_saida.py
projeto/estoque/serializers/: estoque_entrada_serializer.py  estoque_itens_serializer.py  estoque_saida_serializer.py  procolo_itens_serializer.py  protoco_entrega_model.py  protoco_entrega_serializer.py
projeto/estoque/serializers/inlines/: estoque_itens_inline_serializer.py  protocolo_itens_inline_serializer.py
projeto/estoque/tests/factories/: estoque_entrada_factory.py  estoque_itens_factory.py
projeto/estoque/tests/test_models.py/: test_estoque.py  test_estoque_entrada.py  test_estoque_saida.py
projeto/estoque/views/: estoque_entrada_viewset.py  estoque_saida_viewset.py  protocolo_entrega_viewset.py
projeto/estoque/views/decorators/: estoque_entrada_decorators.py  estoque_saida_decorators.py  protocolo_de_entrega_decorators.py
projeto/produto/: admin.py  apps.py  create_data.py  urls.py
projeto/produto/migrations/: 0001_initial.py  0002_categoria_slug.py
projeto/produto/models/: categoria_model.py  produto_model.py
projeto/produto/serializers/: categoria_serializer.py  produto_serializer.py
projeto/produto/serializers/inlines/: categoria_inline_serializer.py  produto_inline_serializer.py
projeto/produto/tests/factories/: categoria_factory.py  produto_factory.py
projeto/produto/utils/: import_csv_produtos.py
projeto/produto/views/: categoria_viewset.py  produto_viewset.py
projeto/produto/views/decorators/: categoria_decorators.py  produto_decorators.py
