[tool.poetry]
name = "estoque"
version = "0.1.0"
description = ""
authors = ["juan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-decouple = "^3.8"
django-extensions = "^3.2.3"
pandas = "^2.2.2"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
